# pixiv_automation

./: cookies.pkl  pyproject.toml
pixiv_automation/: bookmark.py
