[tool.poetry]
name = "pixiv-automation"
version = "0.1.0"
description = ""
authors = ["Mitumine <sotono.dk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.17.2"
black = "^23.12.1"
tqdm = "^4.66.1"
useragent-changer = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
